ionyx-cli/out.txt
    Checking ionyx-cli v0.1.0 (D:\Projects\ionyx-project\ionyx-cli-repo\ionyx-cli)
warning: unused import: `colored::*`
 --> src\main.rs:2:5
  |
2 | use colored::*;
  |     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::fs`
 --> src\commands\config.rs:4:5
  |
4 | use std::fs;
  |     ^^^^^^^

warning: unused import: `std::fs`
 --> src\commands\plugin.rs:3:5
  |
3 | use std::fs;
  |     ^^^^^^^

warning: unused import: `std::path::Path`
 --> src\commands\plugin.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `os_info`
 --> src\commands\info.rs:9:16
  |
9 |     let info = os_info::get();
  |                ^^^^^^^ use of unresolved module or unlinked crate `os_info`
  |
  = help: if you wanted to use a crate named `os_info`, use `cargo add os_info` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
warning: `ionyx-cli` (bin "ionyx") generated 4 warnings
error: could not compile `ionyx-cli` (bin "ionyx") due to 1 previous error; 4 warnings emitted
